--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ dependencies:
   flutter: 
     sdk: flutter
   google_fonts: ^6.2.1
+  firebase_core: ^2.30.1
+  firebase_auth: ^4.19.4
 
 dev_dependencies: 
   flutter_lints: ^3.0.0
