--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   google_fonts: ^6.2.1
   firebase_core: ^2.30.1
   firebase_auth: ^4.19.4
+  cloud_firestore: ^4.17.2
 
 dev_dependencies: 
   flutter_lints: ^3.0.0
