--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,10 @@ dependencies:
   firebase_core: ^2.30.1
   firebase_auth: ^4.19.4
   cloud_firestore: ^4.17.2
+  image_picker: ^1.1.1
+  firebase_storage: ^11.7.4
+  popover: ^0.3.0
+  cached_network_image: ^3.3.1
 
 dev_dependencies: 
   flutter_lints: ^3.0.0
